# deep-learning-optimization-tutorial

./: .flake8  .gitignore  01_common_functions.ipynb  02_network_tuning.ipynb  03_backpropagation_tuning.ipynb  04_overfitting_management.ipynb  05_root_cause_analysis.ipynb  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  __init__.py  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_notebook.py  settings.json  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
deep_learning_optimization/: __init__.py  test_data_validation.py  test_model_functions.py  validate_data.py
scripts/: run_notebook.py  setup.sh  validate_data.py
tests/: test_data_validation.py
